--- a/media/css/style.css
+++ b/media/css/style.css
@@ -30,7 +30,8 @@
     overflow: hidden;
     clear: both; }
 
-ol, ul {
+nav ul,
+ul.grid {
   list-style: none; }
 
 html {
@@ -41,9 +42,10 @@ html {
 body {
   line-height: 1.5;
   color: #222222;
-  border-left: 20px solid #222222;
-  border-right: 20px solid #222222;
+  border-left: 20px solid black;
+  border-right: 20px solid black;
   -webkit-text-size-adjust: none;
+  overflow-x: hidden;
   position: relative; }
   body.has-header {
     padding-top: 44px; }
@@ -95,11 +97,17 @@ ul {
   padding-left: 1.414rem; }
 
 blockquote {
+  display: table;
   font-style: italic;
-  padding: 0 2.827rem;
   font-size: 1.25rem;
   line-height: 1.4;
-  text-align: center; }
+  margin: 0 auto 0.25rem;
+  padding: 0.5rem 0.5rem 0.25rem 1.414rem;
+  border-left: 4px solid #222222; }
+  blockquote:before {
+    content: "\201c"; }
+  blockquote:after {
+    content: "\201d"; }
 
 a {
   color: inherit;
@@ -184,11 +192,20 @@ section {
   max-width: 1440px;
   margin: 0 auto; }
   section > article {
-    padding: 1.414rem 2.827rem; }
+    padding: 1.414rem; }
 
 .paragraph {
-  padding-left: 11.994rem;
   margin-bottom: 1.414rem; }
+
+h3.title,
+.paragraph p,
+.paragraph ul {
+  max-width: 620px;
+  margin-left: auto;
+  margin-right: auto; }
+
+blockquote {
+  max-width: 920px; }
 
 .responsive-video {
   position: relative;
@@ -247,7 +264,7 @@ section {
 
 .portfolio-piece .hero-content {
   color: white;
-  text-shadow: 2px 2px 2px #222222; }
+  text-shadow: 1px 1px 0 rgba(34, 34, 34, 0.5), 2px 2px 0 rgba(34, 34, 34, 0.5), 3px 3px 0 rgba(34, 34, 34, 0.5); }
 
 .grid {
   padding: 10px; }
@@ -296,15 +313,9 @@ section {
   .hero {
     height: 920px; }
 
-  h3.title {
-    text-align: right;
-    width: 11.994rem; }
-
-  .paragraph {
-    padding-left: 11.994rem; } }
-@media (max-width: 960px) {
-  .paragraph {
-    padding-left: 3.998rem; } }
+  .paragraph blockquote {
+    max-width: 1020px;
+    font-size: 1.414rem; } }
 @media (max-width: 768px) {
   html {
     font-size: 20px; }
@@ -319,21 +330,15 @@ section {
 
   .hero {
     padding: 1rem;
-    height: 520px; }
-
-  .paragraph {
-    padding-left: 1rem; }
-
-  blockquote {
-    padding-left: 1rem;
-    padding-right: 1rem; } }
+    height: 520px; } }
 @media (max-width: 568px) {
   html {
     overflow-x: hidden; }
 
   body {
     left: 0;
-    transition: left 1s; }
+    -webkit-transition: left 0.5s;
+    transition: left 0.5s; }
     body.mobile-nav-open {
       left: 120px; }
       body.mobile-nav-open .mobile-nav-closer {
@@ -397,7 +402,11 @@ section {
     border-width: 5px; }
 
   .mobile-nav {
-    left: -125px; } }
+    left: -125px; }
+
+  section > img.image-tilt {
+    width: 150%;
+    margin-left: -25%; } }
 @media (max-height: 320px) {
   html {
     font-size: 16px; }
