font change and responsive tabs plugin

--- a/media/css/style.sass
+++ b/media/css/style.sass
@@ -44,7 +44,7 @@ ul.grid
 
 html
 	margin: 0 !important
-	font-family: "Sorts Mill Goudy", Georgia, Serif
+	font-family: "Lora", Georgia, Serif
 	font-size: 20px
 
 body
@@ -236,6 +236,7 @@ blockquote
 		background: $red
 		border-color: white
 		color: white
+		top: 0
 	h3
 		display: block
 		margin: 0
@@ -260,7 +261,7 @@ blockquote
 	h1
 		margin: 0
 	h3
-		font-family: "Sorts Mill Goudy", Georgia, Serif
+		font-family: "Lora", Georgia, Serif
 		text-align: center
 		text-transform: none
 		margin: 0
