--- a/media/css/style.css
+++ b/media/css/style.css
@@ -36,7 +36,7 @@ ul.grid {
 
 html {
   margin: 0 !important;
-  font-family: "Sorts Mill Goudy", Georgia, Serif;
+  font-family: "Lora", Georgia, Serif;
   font-size: 20px; }
 
 body {
@@ -233,7 +233,8 @@ blockquote {
   .cta:active {
     background: #e70d31;
     border-color: white;
-    color: white; }
+    color: white;
+    top: 0; }
   .cta h3 {
     display: block;
     margin: 0;
@@ -257,7 +258,7 @@ blockquote {
   .hero-content h1 {
     margin: 0; }
   .hero-content h3 {
-    font-family: "Sorts Mill Goudy", Georgia, Serif;
+    font-family: "Lora", Georgia, Serif;
     text-align: center;
     text-transform: none;
     margin: 0; }
