--- a/media/css/hero.css
+++ b/media/css/hero.css
@@ -12,7 +12,7 @@
 .hero .pull-right {
 	text-align: left;
 	padding-left: 1em;
-	padding-top: 74px;
+	padding-top: 86px;
 }
 @media (max-width: 767px) {
 	.hero {
@@ -25,6 +25,14 @@
 	.hero .pull-right {
 		padding: 24px 12px 0;
 		text-align: inherit;
+	}
+}
+@media (max-width: 320px) {
+	.hero .pull-right {
+		padding: 12px 12px 0;
+	}
+	.hero p.f-large {
+		padding-bottom: 26px;
 	}
 }
 .blurrybg {
