--- a/media/css/typography.css
+++ b/media/css/typography.css
@@ -4,7 +4,6 @@
   src: url("../fonts/ATCOverlook-Heavy.eot?#iefix") format("embedded-opentype"), url("../fonts/ATCOverlook-Heavy.woff") format("woff"), url("../fonts/ATCOverlook-Heavy.ttf") format("truetype"), url("../fonts/ATCOverlook-Heavy.svg#e66f84803eb699012366a69da3d2a854") format("svg");
   font-style: normal;
   font-weight: 600; }
-
 *,
 *:before,
 *:after {
@@ -30,13 +29,10 @@
     overflow: hidden;
     clear: both; }
 
-html {
-  margin: 0; }
-
 body {
-  line-height: 1.5;
   font-family: "Merriweather", Georgia, Serif;
   font-size: 24px;
+  line-height: 30px;
   color: black;
   -webkit-text-size-adjust: none;
   overflow-x: hidden; }
@@ -97,43 +93,42 @@ h4 {
   margin-bottom: -7px; }
 
 p.f-large {
-  padding-bottom: 36px; }
+  padding-bottom: 36px;
+  max-width: 36em;
+  margin: 0 auto; }
 p.f-medium {
   padding-bottom: 30px; }
 p.f-small {
   padding-bottom: 18px; }
 
+input,
+textarea {
+  display: block;
+  font-family: inherit;
+  font-size: 24px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid; }
+
 button {
   font-family: "ATC Overlook";
+  font-size: 24px;
   text-transform: uppercase;
   padding: 5px 30px 8px;
   background: none;
-  border: 2px solid black;
+  border: 1px solid #ddd;
   cursor: pointer;
   background-size: cover;
   background-position: center;
-  position: relative; }
-  button:before, button:after {
-    content: attr(data-text);
-    font-size: 30px; }
-  button:before {
-    position: relative;
-    z-index: 1; }
-  button:after {
-    display: none;
-    content: attr(data-text);
-    position: absolute;
-    left: 0;
-    right: 0;
-    -webkit-text-stroke: 10px black; }
-  button:hover, button:active {
-    background-image: url("../images/hover.gif");
-    color: white;
-    border-color: transparent;
-    box-shadow: 0 0 50px #762d1b; }
-    button:hover:after, button:active:after {
-      display: inline-block;
-      display: none; }
+  position: relative;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15), 0 0 20px rgba(0, 0, 0, 0.12);
+  transition: box-shadow 0.5s ease; }
+  button:hover {
+    box-shadow: 0 4px 7px rgba(0, 0, 0, 0.25), 0 0 30px rgba(0, 0, 0, 0.17); }
+    button:hover:active {
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+      border-color: #bbb;
+      transition: box-shadow 0.1s ease; }
   button:focus {
     outline: none; }
 
