--- a/media/css/typography.scss
+++ b/media/css/typography.scss
@@ -38,14 +38,10 @@
 	}
 }
 
-html {
-	margin: 0;
-}
-
 body {
-	line-height: 1.5;
 	font-family: "Merriweather", Georgia, Serif;
 	font-size: 24px;
+	line-height: 30px;
 	color: black;
 	-webkit-text-size-adjust: none;
 	overflow-x: hidden;
@@ -110,6 +106,8 @@ h4 {
 p {
 	&.f-large {
 		padding-bottom: 36px;
+		max-width: 36em;
+		margin: 0 auto;
 	}
 	&.f-medium {
 		padding-bottom: 30px;
@@ -118,46 +116,45 @@ p {
 		padding-bottom: 18px;
 	}
 }
+
+input,
+textarea {
+	display: block;
+	font-family: inherit;
+	font-size: 24px;
+	margin-left: auto;
+	margin-right: auto;
+	border: 1px solid;
+}
 button {
 	font-family: "ATC Overlook";
+	font-size: 24px;
 	text-transform: uppercase;
 	padding: 5px 30px 8px;
 	background: none;
-	border: 2px solid black;
+	border: 1px solid #ddd;
 	cursor: pointer;
 	background-size: cover;
 	background-position: center;
 	position: relative;
-
-	&:before,
-	&:after {
-		content: attr(data-text);
-		font-size: 30px;
-	}
-	&:before {
-		position: relative;
-		z-index: 1;
-	}
-	&:after {
-		display: none;
-		content: attr(data-text);
-		position: absolute;
-		left: 0;
-		right: 0;
-		-webkit-text-stroke: 10px black;
-	}
-
-	&:hover,
-	&:active {
-		background-image: url('../images/hover.gif');
-		color: white;
-		border-color: transparent;
-		box-shadow: 0 0 50px #762d1b;
-		&:after {
-			display: inline-block;
-			display: none;
+	box-shadow: 0 2px 5px rgba(black, 0.15), 0 0 20px rgba(black, 0.12);
+	transition: box-shadow 0.5s ease;
+	&:hover {
+		box-shadow: 0 4px 7px rgba(black, 0.25), 0 0 30px rgba(black, 0.17);
+		&:active {
+			box-shadow: 0 0 5px rgba(black, 0.1);
+			border-color: #bbb;
+			transition: box-shadow 0.1s ease;
 		}
 	}
+
+	// &:hover,
+	// &:active {
+	// 	background-image: url('../images/hover.gif');
+	// 	color: white;
+	// 	border-color: transparent;
+	// 	box-shadow: 0 0 50px #762d1b;
+	// }
 	&:focus {
 		outline: none;
 	}
